--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,24 @@
 {
   "name": "ClassTapMark",
   "short_name": "ClassTapMark",
-  "start_url": "/",
+  "description": "Class management and attendance app",
+  "start_url": "/ClassTapMark/",
+  "scope": "/ClassTapMark/",
   "display": "standalone",
-  "scope": "/",
-  "background_color": "#ffffff",
+  "background_color": "#667eea",
   "theme_color": "#667eea",
-  "orientation": "portrait-primary",
   "icons": [
-    {"src": "favicon-32.png", "sizes": "32x32", "type": "image/png"},
-    {"src": "icon192x192.png", "sizes": "192x192", "type": "image/png"},
-    {"src": "icon256x256.png", "sizes": "256x256", "type": "image/png"},
-    {"src": "icon384x384.png", "sizes": "384x384", "type": "image/png"},
-    {"src": "icon512x512.png", "sizes": "512x512", "type": "image/png"}
+    {
+      "src": "/ClassTapMark/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/ClassTapMark/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
   ]
 }
